--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my second ripo</title>
+    <title>my second github ripo</title>
 </head>
 <body>
-    
+    <h1>New added</h1>
+    <h2>git added head</h2>
+    <h3>heasdjfjhjhj </h3>
+    <p>rfhiuhiuhiueh ehuhuyfhueirhiuhgfu</p>
 </body>
 </html>
